--- a/docs/app/styles.css
+++ b/docs/app/styles.css
@@ -4,7 +4,7 @@
 body {
   margin:0;
   font-family: 'Nunito Sans', sans-serif;
-  background-color: #fffbfb;
+  /*background-color: #fffbfb;*/
 }
 h1 {
   font-family: 'Unica One', system, sans-serif;
@@ -16,11 +16,11 @@ h1 {
   font-family: 'Noto Sans Japanese', sans-serif;
 }
 a {
-  color:#3e5157;
+  color:#573e3e;
   text-decoration: none;
 }
 a:hover {
-  color:#d91538;
+  color:#ed2024;
   transition:.5s;
 }
 .main-title {
