--- a/docs/app/styles.css
+++ b/docs/app/styles.css
@@ -11,7 +11,10 @@ h1 {
   text-transform: uppercase;
   padding:5px;
   text-size:2.5em;
+  box-shadow: 0px -20px 0px 0px #ed2024 inset;
+  display: inline-block;
 }
+
 .japanese {
   font-family: 'Noto Sans Japanese', sans-serif;
 }
