--- a/docs/app/styles.css
+++ b/docs/app/styles.css
@@ -11,8 +11,16 @@ h1 {
   text-transform: uppercase;
   padding:5px;
   text-size:2.5em;
-  box-shadow: 0px -20px 0px 0px #ed2024 inset;
+  /*box-shadow: 0px -20px 0px 0px #ed2024 inset;*/
   display: inline-block;
+}
+h1::after {
+  display: block;
+  content:'';
+  width:auto;
+  height:0.3em;
+  background-color: #ed2024;
+  margin-top: -0.4em;
 }
 
 .japanese {
